The more options button is no longer stuck into the Follow button

--- a/src/Components/ProfilePageComponent/ProfilePageStyles/ProfilePageStyle.scss
+++ b/src/Components/ProfilePageComponent/ProfilePageStyles/ProfilePageStyle.scss
@@ -69,7 +69,7 @@
         .moreOptionsButton{
             float:right;
             margin-right: 0.5rem;
-            margin-top: 0.5rem;
+            margin-top: 0.5rem !important;
             &::after{
                 display: none;
             }
